--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "ChatGPT Enhanced",
-  "description": "Bringing the ChatGPT app features to the browser",
+  "description": "Bringing the ChatGPT app's features to the browser",
   "version": "0.1.0",
   "author": "Devon Crebbin",
   "action": {
@@ -9,16 +9,17 @@
       "32": "icon32.png"
     }
   },
+  "options_page": "src/pages/options/index.html",
   "icons": {
     "16": "icon16.png",
     "32": "icon32.png",
     "48": "icon48.png",
     "128": "icon128.png"
   },
-  "permissions": ["activeTab", "contextMenus"],
+  "permissions": ["activeTab", "contextMenus", "storage"],
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
+      "matches": ["https://chat.openai.com/*"],
       "js": ["src/pages/content/index.tsx"]
     }
   ],
