--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["icon128.png", "icon32.png"],
+      "resources": ["icon128.png", "icon32.png", "example.png"],
       "matches": []
     }
   ]
